WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70466
DFG ConvertThis emits slow code when the source node is known to be, but not predicted to be, a final object
https://bugs.webkit.org/show_bug.cgi?id=70466
Summary
DFG ConvertThis emits slow code when the source node is known to be, but not ...
Filip Pizlo
Reported
2011-10-19 19:47:03 PDT
Patch forthcoming.
Attachments
the patch
(2.99 KB, patch)
2011-10-19 20:42 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-10-19 20:42:57 PDT
Created
attachment 111718
[details]
the patch
Oliver Hunt
Comment 2
2011-10-19 20:46:00 PDT
Comment on
attachment 111718
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=111718&action=review
r=me
> Source/JavaScriptCore/dfg/DFGAbstractState.cpp:509 > - > +
No reason to land this change
Filip Pizlo
Comment 3
2011-10-19 23:38:43 PDT
Landed in
http://trac.webkit.org/changeset/97942
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug