DFG ConvertThis emits slow code when the source node is known to be, but not predicted to be, a final object https://bugs.webkit.org/show_bug.cgi?id=70466

Reviewed by Oliver Hunt.

Added a new case in ConvertThis compilation.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/86657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97942 268f45cc-cd09-0410-ab3c-d52691b4dbfc